first draft, todo abstract

--- a/doc/macros.sty
+++ b/doc/macros.sty
@@ -267,6 +267,7 @@
 \newcommand{\distUnif}{\distNamed{Unif}}
 %\newcommand{\distGam}{\mathscr{G}{\scriptstyle\mathscr{A}}}
 \newcommand{\distGam}{\distNamed{Gam}}
+\newcommand{\distGamma}{\distNamed{Gamma}}
 \newcommand{\distGumbel}{\distNamed{Gumbel}}
 \newcommand{\distGEV}{\distNamed{GEV}}
 \newcommand{\distCat}{\distNamed{Categorical}}
