--- a/doc/ref/tdf-2020.bib
+++ b/doc/ref/tdf-2020.bib
@@ -53,3 +53,42 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{ozturk1981,
+  title={On the study of a probability distribution for precipitation totals},
+  author={{\"O}zt{\"u}rk, Aydin},
+  journal={Journal of Applied Meteorology},
+  volume={20},
+  number={12},
+  pages={1499--1505},
+  year={1981}
+}
+
+@article{withers2011,
+  title={On the compound Poisson-gamma distribution},
+  author={Withers, Christopher and Nadarajah, Saralees},
+  journal={Kybernetika},
+  volume={47},
+  number={1},
+  pages={15--37},
+  year={2011},
+  publisher={Institute of Information Theory and Automation AS CR}
+}
+
+
+@article{smyth1996,
+    author = {Gordon K. Smyth},
+    year = {1996},
+    title = {Regression modelling of quantity data with exact zeroes},
+    journal = {Proceedings of the Second Australia-Japan Workshop on Stochastic Models in Engineering, Technology and Management},
+    pages = {572-580}
+  }
+
+@Manual{R,
+      title = {R: A Language and Environment for Statistical Computing},
+      author = {{R Core Team}},
+      organization = {R Foundation for Statistical Computing},
+      address = {Vienna, Austria},
+      year = {2020},
+      url = {https://www.R-project.org/},
+    }
